# MNQ-5M-Candle

./: .dockerignore  .env  Dockerfile  pyproject.toml
hermes_trading/: __init__.py  loop.py  reflect.py  run.py  score.py
hermes_trading/adapters/: macro.py  news.py  onchain.py  price.py
state/: goal.yaml  hypotheses.jsonl  strategy.yaml  trades.jsonl
